+ (CRM) Fixed display issues in the Known Relationships block when viewed in Dark Mode. Incorrect text and background colors caused relationship entries to be hard to read. (Fixes #6549)

--- a/RockWeb/Styles/styles-v2/rock-components/_profile.scss
+++ b/RockWeb/Styles/styles-v2/rock-components/_profile.scss
@@ -848,7 +848,7 @@ background: currentColor;
 
     &,
     a {
-      color: #212529 !important;
+      color: var(--color-interface-stronger) !important;
     }
 
     strong {
@@ -857,6 +857,6 @@ background: currentColor;
   }
 
   dd {
-    color: #adb5bd;
+    color: var(--color-interface-medium);
   }
 }
